duicontrolpanel (0.8.8~unreleased) unstable; urgency=low

  * Optimization: block unnecessery languageChange events on category
    page openings

 -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 17 Aug 2010 10:28:02 +0200

duicontrolpanel (0.8.7) unstable; urgency=low

  * Fixes: NB#183023 - Settings page is displaying !! as prefix of Service
    accounts
  * Fixes: NB#178164 - The using AP is displayed inconsistently on
    Settings page
  * Implements support for the new applet briefwidget (switch type)
  * Fixes: if invoked by dbus, mainPage was shown for a sec

 -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 10 Aug 2010 15:27:20 +0200

duicontrolpanel (0.8.6) unstable; urgency=low

  [ Robert Manner ]
  * Fixes: NB#182605 - multiple instances of DCP can be opened at the
    same time

  [ Viktor Nagy ]
  * Redirect standard io channels of applications launched by
    control panel to /dev/null
    Fixes: NB#182372 - The script "/usr/share/csd-call/csd-call-backup" fails while taking backup

 -- Viktor Nagy <viktor.nagy@blumsoft.eu>  Thu, 05 Aug 2010 15:59:40 +0200

duicontrolpanel (0.8.5) unstable; urgency=low

  [ Robert Manner ]
  * Fixes: height of contentitems are non constant
  * Fixes: NB#178814 -  Icon is not shown in the applet's brief
  * Fixes: NB#173756 - The order of the items in recently used list is
    not same after the device reboot
  * Fixes: NB#180202 - Default value for DcpBrief is deprecated
  * Fixes: NB#180332 - Control panel applets: Way to load multiple
    catalogs needed

  [ Viktor Nagy ]
  * Fixes: NB#180791 - Invalid libs-pkg in duicontrolpanel API file
  [ Laszlo Gal]
  * most used does not count button type applets like offline applet

 -- Laszlo Gal <laszlo.gal@blumsoft.eu>  Thu, 22 Jul 2010 17:33:19 +0200

duicontrolpanel (0.8.4) unstable; urgency=low

  * Some margin fixes
  * Fixes: NB#170026 - Emitting valuesChanged signal doesn't update
    valueText displayed in Brief (removes the workaround, because bug got fixed)