@@ -2,7 +2,7 @@ usr/lib/duicontrolpanel/applets/libdcpskeletonapplet.so
 usr/lib/duicontrolpanel/applets/libdcpskelbuttonapplet.so
 usr/lib/duicontrolpanel/skeleton.desktop
 usr/lib/duicontrolpanel/skelbutton.desktop
-usr/share/themes/base/meegotouch/duicontrolpanel/style/skeletonapplet.css
+usr/share/themes/base/meegotouch/libdcpskeletonapplet/style/libdcpskeletonapplet.css
 usr/lib/duicontrolpanel/declexample.desktop
 usr/lib/duicontrolpanel/uidescriptions/example1.xml
 usr/lib/duicontrolpanel/externalapp.desktop
