@@ -13,13 +13,13 @@ SOURCES       = dcpskeletonapplet.cpp \
 		dcpskeletonwidget.cpp \
                 dcpskeletonbrief.cpp
 
-css.files     = skeletonapplet.css
+css.files     = *.css
 DESTDIR       = ../lib
 TARGET        = $$qtLibraryTarget(dcpskeletonapplet)
 desktop.files += *.desktop
 desktop.path = $$DCP_DESKTOP_DIR
 target.path += $$DCP_APPLET_DIR
-css.path    += $$DCP_THEME_DIR/style
+css.path    += /usr/share/themes/base/meegotouch/libdcpskeletonapplet/style/
 
 message("The plugin will be installed to: " $$target.path)
 message("CSS path will be: " $$css.path)
