@@ -1,0 +1,5 @@
+#LabelAbout {
+        color: #000000;
+        font: "Nokia Sans Cn" 32;
+}
+
