@@ -1,5 +1,0 @@
-#LabelAbout {
-        color: #FFFFFF;
-        font: "Nokia Sans Cn" 16;
-}
-
